--- a/index.html
+++ b/index.html
@@ -274,16 +274,16 @@
                     <div class="col-md-6">
                         <form action="">
                             <div class="form-group mb-4">
-                                <input type="text" class="form-control" placeholder="First Name">
+                                <input type="text" class="form-control" placeholder="First Name" name="name">
                             </div>
                             <div class="form-group mb-4">
-                                <input type="text" class="form-control" placeholder="Last Name">
+                                <input type="text" class="form-control" placeholder="Last Name" name="last">
                             </div>
                             <div class="form-group mb-4">
-                                <input type="email" class="form-control" placeholder="Email">
+                                <input type="email" class="form-control" placeholder="Email" name="last">
                             </div>
                             <div class="form-group mb-4">
-                                <textarea class="form-control" placeholder="message"></textarea>
+                                <textarea class="form-control" placeholder="message" name="message"></textarea>
                             </div>
                             <div>
                                 <button class="btn btn-main">send message</button>
