add type for button

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                 <textarea class="form-control" placeholder="message" name="message"></textarea>
                             </div>
                             <div>
-                                <button class="btn btn-main">send message</button>
+                                <button type="submit" class="btn btn-main">send message</button>
                             </div>
                         </form>
                     </div>
