--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                                 <input type="text" class="form-control" placeholder="Last Name" name="last">
                             </div>
                             <div class="form-group mb-4">
-                                <input type="email" class="form-control" placeholder="Email" name="last">
+                                <input type="email" class="form-control" placeholder="Email" name="email">
                             </div>
                             <div class="form-group mb-4">
                                 <textarea class="form-control" placeholder="message" name="message"></textarea>
